[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isa-rwval"
version = "0.10.11"
description = "Metadata tracking tools help to manage an increasingly diverse set of life science, environmental and biomedical experiments"
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
authors = [
    { name = "ISA Infrastructure Team", email = "isatools@googlegroups.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
    "networkx>=2.5"
]

[project.optional-dependencies]
viz = ["matplotlib"]
tables = ["pandas", "numpy"]

[project.urls]
Homepage = "https://github.com/ISA-tools/isa-rwval"
Source = "https://github.com/ISA-tools/isa-rwval"

[tool.setuptools]
packages = ["isatools", "isatools.errors"]

[tool.setuptools.package-data]
"" = ["LICENSE.txt", "README.md"]
